# sr-scanner-demo

./: .gitignore
be/: CMakeLists.txt  main.cpp  mock_pipeline_driver.cpp  mock_pipeline_driver.h  readme.md
be/column/: column.h  column_helper.cpp  column_helper.h
be/common/: buffer.cpp  buffer.h  chunk.h  constexpr.h  global_types.h  mock_t_table_descriptor.h  status.h  statusor.h
be/datasource/: connector.h  jdbc_connector.cpp  jdbc_connector.h
be/fs/: fs_util.h
be/http/: http_client.cpp  http_client.h  http_headers.cpp  http_headers.h  http_method.cpp  http_method.h  http_response.cpp  http_response.h  http_status.cpp  http_status.h
be/operator/: connector_scan_operator.cpp  connector_scan_operator.h  scan_operator.cpp  scan_operator.h  source_operator.h
be/runtime/: descriptor.h  jdbc_driver_manager.cpp  jdbc_driver_manager.h  primitive_type.h  runtime_state.cpp  runtime_state.h  types.cpp  types.h
be/scanner/: jdbc_scanner.cpp  jdbc_scanner.h
be/source/: chunk_source.cpp  chunk_source.h
be/table/: descriptors.cpp  descriptors.h
be/udf/: java_udf.cpp  java_udf.h  types.h
be/util/: defer_op.h  download_util.cpp  download_util.h  md5.cpp  md5.h
fe/: pom.xml
fe/src/main/java/com/starrocks/jdbcbridge/: DataSourceCache.java  JDBCBridge.java  JDBCScanContext.java  JDBCScanner.java  JDBCUtil.java  Main.java
fe/src/main/resources/: log4j2.xml
